<resources>
    <string name="app_name">EmergencyApp</string>
    <!-- make signup bold-->
    <string name="no_account">No account? <b>Sign Up</b></string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="name">Name</string>
    <string name="signup">Sign Up</string>
    <string name="signupGoogle">Sign up with Google</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="year_of_birth">Year of Birth</string>
    <string name="title_activity_map">MapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="forgot_password"><b>Forgot Password?</b></string>
    <string name="enter_your_email_here">Enter your email here.</string>
    <string name="we_got_you">We got you!</string>
    <string name="second_page_guide_message">Open the map and you will see\nyour actual location and places around!</string>
    <string name="skip">Skip</string>
    <string name="get_help_from_our_life_savers">Get help from our Life Savers</string>
    <string name="ask_our_assistants_any_question_and_get_a_solution_for_your_problem">Ask our assistants any question and get a solution for your problem</string>
    <string name="write_a_message">Write a message…</string>
    <string name="emergency_phone_numbers">Emergency Phone Numbers</string>
    <string name="romania">Romania</string>
    <string name="click_a_number_to_call">Click a number to call</string>
    <string name="home">HOME</string>
    <string name="profile">Profile</string>
    <string name="map">Map</string>
    <string name="urgent_call">Urgent call</string>
    <string name="assistants">Assistants</string>
    <string name="permission_request">Permission Request</string>
    <string name="allow_permissions_location_message">Emergency App needs permission to access device location to provide required services. Please allow the permission.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="birth_year">Birth Year</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="delete_for_everyone">Delete for everyone</string>
    <string name="delete_for_me">Delete for me</string>
    <string name="cancel">Cancel</string>
    <string name="first_page_guide_message">We are here to help you!\nFirst of all you have to create\n an account!</string>
    <string name="welcome">Welcome!</string>
    <string name="profile_name">Profile Name</string>
    <string name="assistant">Assistant</string>
    <string name="we_are_here_to_help_you">We are here to help you!</string>
    <string name="third_page_guide_message">Open the chat and\nstart a conversation with us.\nWe will help you with\nyour problem!</string>
    <string name="start">Start</string>
    <string name="online">Online</string>
    <string name="back_button">Back button</string>
    <string name="attach">Attach</string>
    <string name="open_camera">Open camera</string>
    <string name="send_message">Send message</string>
    <string name="check_email_for_verification_message">Account created.\nCheck your email for verification</string>
    <string name="launch_email_app">Launch Email App</string>
    <string name="open_gmail">Open Gmail</string>
    <string name="open_outlook">Open Outlook</string>
    <string name="go_to_login_page">Go to Login page</string>
    <string name="share_the_app">Share the app</string>
    <string name="account">Account</string>
    <string name="community">Community</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general">General</string>
    <string name="help">Help</string>
    <string name="app_guide">App guide</string>
    <string name="tutorial_video">Tutorial video</string>
    <string name="marker">marker</string>
</resources>
