<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/general">
        <menu>
            <item
                android:id="@+id/nav_assistants"
                android:title="@string/assistants"
                android:icon="@drawable/ic_baseline_supervised_user_circle_24"/>

            <item
                android:id="@+id/nav_map"
                android:title="@string/map"
                android:icon="@drawable/ic_baseline_location_on_24"/>

            <item
                android:id="@+id/nav_urgent_call"
                android:title="@string/urgent_call"
                android:icon="@drawable/ic_baseline_call_24"/>
        </menu>
    </item>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:title="@string/profile"
                android:icon="@drawable/ic_baseline_person_outline_24"/>

            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_baseline_exit_to_app_24"/>
        </menu>
    </item>

    <item android:title="@string/help">
        <menu>
            <item
                android:id="@+id/nav_show_guide"
                android:title="@string/app_guide"
                android:icon="@drawable/ic_baseline_help_center_24"/>

            <item
                android:id="@+id/nav_show_tutorial_video"
                android:title="@string/tutorial_video"
                android:icon="@drawable/ic_baseline_video_cam_24"/>
        </menu>
    </item>

    <item android:title="@string/community">
        <menu>
            <item
                android:id="@+id/nav_share_app"
                android:title="@string/share_the_app"
                android:icon="@drawable/ic_baseline_share_24"/>
        </menu>
    </item>
</menu>
